--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,10 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
-}
+/* removed list-style-type = none */
 
-.header div ul li {
+
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -101,7 +100,7 @@ p {
     color: #ffffff;
 }
 
-.benefit-lead h3 {
+.benefit-lead details h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -188,13 +187,13 @@ p {
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
